# Whakaari-probabilistic-eruption-forecasting

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  environment.yml  gessp-operational-stack.yml  pyproject.toml
.devcontainer/: devcontainer.json
examples/: Whakaari_BN.ipynb
whakaaribn/: __init__.py  assimilate.py  bayesnet.py  data.py  forecast.py  job_scheduler.py  util.py  visualize.py
whakaaribn/data/: README.md  WhiteIs_Eruption_Catalogue.csv  fully_connected_model_5_states_trained.xdsl
whakaaribn/tests/: conftest.py  test_bayesnet.py  test_bn_evaluate.py  test_docstrings.py  test_earthquakes.py  test_gas.py  test_nodes.py  test_notebooks.py  test_tremor.py  test_util.py  test_whakaari.py
